--- a/src/pages/shopping-cart/shopping-cart.html
+++ b/src/pages/shopping-cart/shopping-cart.html
@@ -20,6 +20,10 @@
         <div class="pull-left">
           <h4 class="list-group-item-heading">{{ shoppingcartproduct.name}}</h4>
         </div>
+        <div class="pull-center">
+          <button class="btn btn-success" (click)="modifyShoppingCart(shoppingcartproduct.name, true)">+</button>
+          <button class="btn btn-danger" (click)="modifyShoppingCart(shoppingcartproduct.name, false)">-</button>
+        </div>
         <span class="pull-right">
           <p class="list-group-item-text">
             {{shoppingcartproduct.price}} €            {{shoppingcartproduct.amount}} Unidades</p>
@@ -31,7 +35,7 @@
     <div class="col-xs-12">
       <a href="#" class="list-group item clearfix">
         <div class="pull-center">
-          <h4 (click)="calculatePrice()">Precio: {{this.price}} €</h4>
+          <h4>Precio: {{this.price}} €</h4>
         </div>
       </a>
     </div>
