--- a/src/pages/cover/cover.html
+++ b/src/pages/cover/cover.html
@@ -20,7 +20,7 @@
               class="form-control">
           </div>
 
-          <button class="btn btn-primary" type="submit">Entrar evento</button>
+          <button class="btn btn-primary" type="submit">Entrar con pulsera</button>
 
         </form>
       </div>
@@ -30,7 +30,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <button class="btn btn-primary" type="submit" (click)="onClick()">Crear Evento</button>
+        <button class="btn btn-primary" type="submit" (click)="onClick()">Registrar pulsera</button>
       </div>
     </div>
   </div>
