--- a/src/pages/new-event/new-event.html
+++ b/src/pages/new-event/new-event.html
@@ -1,16 +1,26 @@
+
 <ion-header>
+
   <ion-navbar>
-    <ion-title>
-      Bracelit
-    </ion-title>
+    <ion-title>Nuevo Evento</ion-title>
   </ion-navbar>
+
 </ion-header>
+
 
 <ion-content padding>
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <form [formGroup]="signupForm" (ngSubmit)="onSubmit(username)">
+        <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              id="name"
+              formControlName="name"
+              class="form-control">
+          </div>
           <div class="form-group">
             <label for="id">id</label>
             <input
@@ -19,18 +29,8 @@
               formControlName="id"
               class="form-control">
           </div>
-
-          <button class="btn btn-primary" type="submit">Entrar evento</button>
-
+          <button class="btn btn-primary" type="submit">Registrar evento</button>
         </form>
-      </div>
-    </div>
-  </div>
-  <hr>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <button class="btn btn-primary" type="submit" (click)="onClick()">Crear Evento</button>
       </div>
     </div>
   </div>
