Funcionan las ofertas pero no los bonos

--- a/src/pages/shopping-cart/shopping-cart.html
+++ b/src/pages/shopping-cart/shopping-cart.html
@@ -20,7 +20,7 @@
         <div class="pull-left">
           <h4 class="list-group-item-heading">{{ shoppingcartproduct.name}}</h4>
         </div>
-        <div class="pull-center">
+        <div class="pull-right">
           <button class="btn btn-success" (click)="modifyShoppingCart(shoppingcartproduct.name, true)">+</button>
           <button class="btn btn-danger" (click)="modifyShoppingCart(shoppingcartproduct.name, false)">-</button>
         </div>
